Vishal|Dheeru #312 removed unused dependencies